k8s/local/db-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
  labels:
    component: db
spec:
  replicas: 1
  selector:
    matchLabels:
      pod: database
  template:
    metadata:
      labels:
        pod: database
    spec:
      containers:
      - name: postgres
        image: postgres:15.2-alpine
        imagePullPolicy: Always  
        ports:
        - containerPort: 5432
