k8s/local/be-service.yml
apiVersion: v1
kind: Service
metadata:
  name: be-service
spec:
  selector:
    pod: todo-be
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
