k8s/local/db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: db-service
spec:
  selector:
    pod: database
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
