k8s/local/fe-service.yml
apiVersion: v1
kind: Service
metadata:
  name: fe-service
spec:
  selector:
    component: fe
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
