k8s/local/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: local-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: local-lcapstone.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fe-service
            port:
              number: 80
      - path: /api/v1
        pathType: Prefix
        backend:
          service:
            name: be-service
            port:
              number: 5000
